--- a/New folder (5)/index.html
+++ b/New folder (5)/index.html
@@ -43,7 +43,7 @@
             </tr>
             <tr>
                 <td>
-                    Cuntary
+                    Country
                 </td>
                 <td>
                     <select>
